[gd_scene load_steps=11 format=3 uid="uid://ckjhr01upcsj3"]

[ext_resource type="Script" path="res://Game/main_menu.gd" id="1_mrq58"]
[ext_resource type="Texture2D" uid="uid://mcdfpjtcr8h7" path="res://Assets/fantasy_pixel_background_by_artificialhub_dfwy0mp-pre.jpg" id="2_46rwd"]
[ext_resource type="FontFile" uid="uid://xwfeeqs0glrb" path="res://Assets/medusa-gothic/MedusaGothic D.otf" id="3_k3q1d"]
[ext_resource type="AudioStream" uid="uid://d042g80mnq743" path="res://Realm of Fantasy.mp3" id="4_qwyms"]

[sub_resource type="LabelSettings" id="LabelSettings_16yd4"]
font = ExtResource("3_k3q1d")
font_size = 100
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_pdgjt"]
default_base_scale = 2.0
default_font = ExtResource("3_k3q1d")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2qn5f"]
bg_color = Color(0, 0.2288, 0.28298, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rd7np"]
bg_color = Color(0.639216, 0.278431, 0.0705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4w1jj"]
bg_color = Color(0, 0.301961, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hw1qt"]
bg_color = Color(0.584314, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mrq58")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.099
anchor_top = -0.21
anchor_right = 1.099
anchor_bottom = 1.21
offset_left = 136.62
offset_top = 193.2
offset_right = -136.62
offset_bottom = -193.2
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_46rwd")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 92.0
offset_top = -178.0
offset_right = 800.0
offset_bottom = -38.0
grow_vertical = 2
text = "Spellthief"
label_settings = SubResource("LabelSettings_16yd4")

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -276.0
offset_right = -141.0
offset_bottom = -184.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_pdgjt")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_2qn5f")
text = "Start
"

[node name="Co-op" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -394.0
offset_top = -124.0
offset_right = -143.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_pdgjt")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_rd7np")
text = "Host
"

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -461.0
offset_top = 19.0
offset_right = -95.0
offset_bottom = 111.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_pdgjt")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_4w1jj")
text = "Settings
"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -384.0
offset_top = 147.0
offset_right = -133.0
offset_bottom = 239.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_pdgjt")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_hw1qt")
text = "QUit
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qwyms")
autoplay = true

[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="Co-op" to="." method="_on_coop_button_down"]
[connection signal="button_down" from="Settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="Quit" to="." method="_on_quit_button_down"]
